# kagglehomecredit2024

./: .gitignore  README.md  Solution.md  pyproject.toml  setup.py
features/: dfs_props_1.pkl  dfs_props_4.pkl  dfs_props_5.pkl  feature_definitions.csv  features3.txt  features5.txt  features6.txt  features_1.csv  features_2.csv  features_4.csv  features_5.csv  features_6.csv
homecredit/: analysis.py  config.py  kaggle.py  metrics.py  pipeline.py  setup_env.py  tracker.py  utils.py
homecredit/data/: data_processor_1.py  data_processor_2.py  data_processor_3.py  data_processor_4.py  data_processor_5.py  data_processor_6.py  utils.py  utils_old.py
homecredit/models/: ensemble.py  linear.py  tree.py
notebooks/: main.ipynb
scripts/: update_kaggle.py  write_props.py
